Instanziazione dei componenti, gestione degli stati del gioco nei metodi di "GameSate", aggiunta del componente "Empty".